fix alignment with no text bug
now always shows the flair box in the same place regardless if there is no text in it

--- a/flags.css
+++ b/flags.css
@@ -129,6 +129,7 @@ span.flair
    width: auto;
    min-width: 18px;
    voice-family: takei;
+   vertical-align: bottom;
 }
 
 /* over ride some tags for dual flags */
